Fix parseCommand_mail