@@ -129,10 +129,10 @@ public class AddressBookParserTest {
 
     @Test
     public void parseCommand_mail() throws Exception {
-        List<String> keywords = Arrays.asList("friends", "owesMoney");
-        MailCommand command = (MailCommand) parser.parseCommand(
-                MailCommand.COMMAND_WORD + " " + keywords.stream().collect(Collectors.joining(" ")));
-        assertEquals(new MailCommand(new TagContainsKeywordsPredicate(keywords)), command);
+        List<String> keywords = List.of("friends", "owesMoney");
+        MailCommand expectedCommand = (MailCommand) parser.parseCommand(
+                MailCommand.COMMAND_WORD + " " + String.join(" ", keywords));
+        assertEquals(new MailCommand(new TagContainsKeywordsPredicate(keywords)), expectedCommand);
     }
 
     @Test
